# dde-store

./: .gitignore  CMakeLists.txt  README.ar.md  README.de.md  README.es.md  README.md  README.tr.md  README_es.md  dde-store.desktop  dde-store_tr.ts  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
.github/: FUNDING.yml
.github/workflows/: builds.yml  main.yml
backend/: appstreamhelper.cpp  appstreamhelper.h  packagekithelper.cpp  packagekithelper.h  ratingshelper.cpp  ratingshelper.h  settings.cpp  settings.h  snaphelper.cpp  snaphelper.h  sourcemanager.cpp  sourcemanager.h
backend/sources/: CMakeLists.txt
backend/sources/flatpak/: CMakeLists.txt  flatpaksource.cpp  flatpaksource.h
backend/sources/packagekit/: packagekitsource.cpp  packagekitsource.h
backend/sources/snap/: CMakeLists.txt  snapsource.cpp  snapsource.h
debian/: changelog  control  copyright  rules
pages/: categorypage.cpp  categorypage.h  homepage.cpp  homepage.h  itempage.cpp  itempage.h  updatespage.cpp  updatespage.h
plugins/: CMakeLists.txt  pluginloader.cpp  pluginloader.h
plugins/flatpak/: CMakeLists.txt  flatpakinterface.h  flatpakplugin.cpp  flatpakplugin.h
plugins/snap/: CMakeLists.txt  dde-store-snapplugin.desktop  snaphelper.cpp  snaphelper.h  snapinterface.h  snapplugin.cpp  snapplugin.h
resources/: dde-store.desktop  featuredapps.json  featuredbanners.json  resources.qrc  settings.json
translations/: README_es.md  dde-store.ts  dde-store_ar.ts  dde-store_br.ts  dde-store_de.ts  dde-store_en.ts  dde-store_es.ts  dde-store_ja.ts  dde-store_kab.ts  dde-store_nl.ts  dde-store_pt_BR.ts  dde-store_ru.ts  dde-store_tr.ts  dde-store_zh_CN.ts
translations/README/: README.ar.md  README.br.md  README.de.md  README.es.md  README.ja.md  README.kab.md  README.nl.md  README.ru.md  README.tr.md  TRANSLATIONS.md
widgets/: gallery.cpp  gallery.h  list.cpp  list.h  stars.cpp  stars.h
